--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
+    <!--strings.xml-->
     <string name="app_name">Series Handler</string>
+    <string name="text_extend">протянуть серии</string>
+    <string name="text_merge">Попарно объединить</string>
+    <string name="copy_massage">скопировано</string>
+    <string name="text_4Z">Форматировать ЧЗ</string>
+    <string name="text_hint">Введите серии...\n\nСерии должны идти парами:\nAAAA0001\nAAAA0002</string>
+    <string name="text_hint_help">Введите серии...\n\nСерии должны идти парами:\nAAAA0001\nAAAA0002</string>
+    <string name="text_hint_4Z">Введите данные...\n\nEAN\nЧЗ\nЧЗ\n...\</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
